# rag_integration

./: .gitignore  .releaserc.yaml  AGENTS.md  CLAUDE.md  README.md  demo.ipynb  pyproject.toml  requirements-models.txt  test_manual_image.py  tox.ini
.claude/: settings.json
.claude/skills/mloda-core/: SKILL.md
.claude/skills/mloda-plugins/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: release.yaml  security-scan.yaml  template-sync.yaml  test.yml
cli/: README.md  __init__.py  eval_demo.py  rag_demo.py  swap_demo.py
cli/docs/: customer_feedback.txt  meeting_notes.txt  product_notes.txt
docs/: build-spec.md  fg-issues.md  getting-started.md  github-workflows.md  goal.md  plan-issue-52-backend-breadth.md  rag-connector-base-classes.md
docs/design/: rag_pipeline.md
docs/discussion/architecture_proposal/: README.md  proposal_1_flat_featuregroups.md  proposal_2_domain_based.md  proposal_3_provider_options.md  proposal_4_composite_featuregroups.md  proposal_5_extender_based.md  proposal_6_cwa_layers.md  proposal_7_property_driven.md  proposal_8_base_framework_split.md  proposal_9_provider_inheritance.md
docs/how-to/: 09-create-feature-group.md
docs/how-to/feature-group-patterns/: 01-root-features.md  02-derived-features.md  03-chained-features.md  04-multi-input-features.md  05-multi-output-features.md  06-artifact-features.md  07-index-features.md  08-links-joins.md  09-framework-specific.md  10-testing-guide.md  11-options.md  12-calculate-feature.md  13-feature-naming.md  14-feature-matching.md  15-filter-concepts.md  16-validators.md  17-data-connection-matching.md  18-datatypes.md  19-domain.md  20-versioning.md  21-experimental-shortcuts.md
docs/research/: evaluation-datasets.md  multimodal-images.md
examples/: full_pipeline.py  quickstart.py
rag_integration/compute_frameworks/my_plugin/: __init__.py
rag_integration/compute_frameworks/my_plugin/tests/: test_my_compute_framework.py
rag_integration/extenders/my_plugin/: __init__.py
rag_integration/extenders/my_plugin/tests/: test_my_extender.py
rag_integration/feature_groups/: columnar.py  deduplication_base.py  rows.py
rag_integration/feature_groups/connectors/: README.md  errors.py  fusion.py  mixins.py
rag_integration/feature_groups/connectors/generate/: base.py  extractive_responder.py  template_responder.py
rag_integration/feature_groups/connectors/graph_rag/: __init__.py  adjacency_graph_rag.py  base.py  kg_source.py  networkx_graph_rag.py
rag_integration/feature_groups/connectors/orchestrator/: base.py  haystack_orchestrator.py  r2r_fixture_orchestrator.py
rag_integration/feature_groups/datasets/: __init__.py
rag_integration/feature_groups/evaluation/: __init__.py  faiss_retrieval_evaluator.py  metrics.py  retrieval_evaluator.py
rag_integration/feature_groups/image_pipeline/: __init__.py
rag_integration/feature_groups/my_plugin/: __init__.py
rag_integration/feature_groups/rag_pipeline/: __init__.py
tests/: __init__.py  conftest.py  test_evaluation_pipeline_integration.py  test_faiss_evaluation_pipeline_integration.py  test_faiss_search_integration.py  test_image_pipeline_integration.py  test_index_and_retrieve_integration.py  test_rag_pipeline_integration.py  test_vector_store_integration.py
tests/connectors/: test_fusion.py  test_shared_mixins.py  test_single_query_guard.py  test_swap_demo.py
tests/connectors/generate/: generate_contract.py  test_template_responder.py
tests/connectors/graph_rag/: graph_rag_contract.py  test_base_edges.py  test_graph_source_chaining.py  test_kg_source.py
tests/connectors/orchestrator/: orchestrator_contract.py
tests/connectors/rerank/: rerank_contract.py  test_flashrank_surface.py
tests/connectors/retrieve/: retrieve_contract.py  test_faiss_retriever.py  test_hybrid_rrf_retriever.py
tests/connectors/structured/: structured_contract.py  test_aggregate_sql.py  test_rule_based_sql.py
tests/feature_groups/: __init__.py  test_columnar.py  test_deduplication_base.py  test_property_mapping_defaults.py  test_rows.py  test_thread_safety.py
tests/feature_groups/chunking/: __init__.py  test_fixed_size.py  test_paragraph.py  test_semantic.py  test_sentence.py  text_chunking_test_base.py
tests/feature_groups/deduplication/: __init__.py  test_exact_hash.py  test_ngram.py  test_normalized.py  text_dedup_test_base.py
tests/feature_groups/document_source/: __init__.py  document_source_test_base.py  test_dict_loader.py  test_file_loader.py
tests/feature_groups/embedding/: __init__.py  test_embedding_artifact.py  test_hash_embed.py  test_mock.py  test_tfidf.py  text_embedding_test_base.py
tests/feature_groups/llm_response/: test_claude_cli.py
tests/feature_groups/pii_redaction/: __init__.py  test_pattern.py  test_presidio.py  test_regex.py  test_simple.py  text_pii_redaction_test_base.py
tests/feature_groups/retrieval/: test_faiss_retriever.py
tests/feature_groups/vector_store/: test_faiss_flat.py  test_faiss_ivf.py  test_hnsw.py  test_vector_store_artifact.py  vector_store_test_base.py
tests/feature_groups_datasets/: test_flickr30k_loader.py  test_scifact_loader.py
tests/feature_groups_evaluation/: test_faiss_retrieval_evaluator.py  test_metrics.py  test_retrieval_evaluator.py
tests/feature_groups_image/: __init__.py
tests/feature_groups_image/deduplication/: image_dedup_test_base.py  test_dhash.py  test_exact_hash.py  test_phash.py
tests/feature_groups_image/embedding/: image_embedding_test_base.py  test_hash_embed.py  test_mock.py
tests/feature_groups_image/image_source/: image_source_test_base.py  test_dict_loader.py  test_file_loader.py
tests/feature_groups_image/pii_redaction/: image_pii_redaction_test_base.py  test_blur.py  test_pixel.py  test_solid.py
tests/feature_groups_image/preprocessing/: image_preprocessing_test_base.py  test_normalize.py  test_resize.py  test_thumbnail.py
tests/integration/: helpers.py  test_evaluation.py  test_faiss.py  test_helpers.py  test_heterogeneous_sources.py  test_image_pipeline.py  test_mloda_imports.py  test_rag_pipeline.py  test_stage_connector_parity.py
(+83 files in other folders)
