[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.3.1"
dependencies = ["mloda>=0.4.3", "mloda-testing>=0.2.8"]
name = "rag-integration"
description = "RAG integration plugin for mloda"
license = {text = "Proprietary"}
authors = [{ name = "mloda", email = "plugin-dev@mloda.ai" }]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]
# All advanced features (presidio, sentence-transformers, artifact persistence)
advanced = [
    "presidio-analyzer>=2.2.0",
    "sentence-transformers>=2.2.0",
    "joblib>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_integration*"]

[tool.pytest.ini_options]
testpaths = ["rag_integration", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = [".tox", ".venv", "tests"]
