[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.3.1"
dependencies = ["mloda>=0.4.8", "mloda-testing>=0.2.11"]
name = "rag-integration"
description = "RAG integration plugin for mloda"
license = {text = "Proprietary"}
authors = [{ name = "mloda", email = "plugin-dev@mloda.ai" }]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]
# FAISS vector indexing
faiss = ["faiss-cpu>=1.7.0"]
# All advanced features (presidio, sentence-transformers, artifact persistence, faiss)
advanced = [
    "presidio-analyzer>=2.2.0",
    "sentence-transformers>=2.2.0",
    "joblib>=1.0.0",
    "Pillow>=9.0.0",
    "faiss-cpu>=1.7.0",
]
# Evaluation datasets and metrics (no network access at eval time)
eval = [
    "beir>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]
# Heavy models for local testing only (not installed in CI)
models = [
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_integration*"]

[tool.pytest.ini_options]
testpaths = ["rag_integration", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = [".tox", ".venv", "tests"]
