[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.4.0"
dependencies = ["mloda>=0.8.0", "mloda-testing>=0.3.2"]
name = "rag-integration"
description = "RAG integration plugin for mloda"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{ name = "mloda", email = "plugin-dev@mloda.ai" }]
requires-python = ">=3.10"
keywords = ["mloda", "rag", "retrieval-augmented-generation", "llm", "embeddings", "vector-search", "feature-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mloda-ai/rag_integration"
Repository = "https://github.com/mloda-ai/rag_integration"
Issues = "https://github.com/mloda-ai/rag_integration/issues"
"mloda core" = "https://github.com/mloda-ai/mloda"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]
# FAISS vector indexing
faiss = ["faiss-cpu>=1.7.0"]
# All advanced features (presidio, sentence-transformers, artifact persistence, faiss)
advanced = [
    "presidio-analyzer>=2.2.0",
    "sentence-transformers>=2.2.0",
    "joblib>=1.0.0",
    "Pillow>=9.0.0",
    "faiss-cpu>=1.7.0",
]
# Evaluation datasets and metrics (no network access at eval time)
eval = [
    "beir>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]
# Connector families: wrap external open-source RAG tools (see issue #25).
# retrieve family canonical backend: bm25s (MIT, numpy-only, zero-download).
connectors = [
    "bm25s>=0.2.0",
]
# rerank family pedigree backend: FlashRank (Apache-2.0, ONNX, no torch). The
# canonical lexical reranker is pure-Python and needs no extra; this adds the
# neural cross-encoder backend (model downloads on first use).
rerank = [
    "flashrank>=0.2.0",
]
# graph_rag family canonical backend: networkx (BSD, pure-Python, zero-download).
graph = [
    "networkx>=3.0",
]
# structured family: sqlglot (MIT, pure-Python, zero-download) parses/validates
# the generated SQL; execution is on the stdlib sqlite3 module.
structured = [
    "sqlglot>=25",
]
# orchestrator family canonical backend: Haystack 2.x (Apache-2.0). Its in-memory
# BM25 pipeline is zero-download (no model, no server), so it runs in CI.
orchestrator = [
    "haystack-ai>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_integration*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so the "Typing :: Typed" classifier holds and
# downstream consumers get the type hints this package checks under mypy --strict.
"rag_integration" = ["py.typed"]
# Ship the orchestrator R2R fixture-stub's canned-response JSON in the wheel.
"rag_integration.feature_groups.connectors.orchestrator" = ["fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["rag_integration", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
extend-exclude = ["demo.ipynb"]

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = [".tox", ".venv", "tests"]
